--- a/Data/css/stylepage3.css
+++ b/Data/css/stylepage3.css
@@ -57,8 +57,8 @@ body {
 
 /* Card styling */
 .card {
-    background-color: #fff;
-    background-image: url('https://images.unsplash.com/photo-1517867065801-e20f409696b0?q=80&w=2071&auto=format&fit=crop');
+    background-color: #000000;
+    background-image: url('https://media.istockphoto.com/id/1679580652/photo/japanese-washi-paper-background-with-floral-frame-illustration.jpg?s=612x612&w=0&k=20&c=9ESHl8gpuMVp5XqHOoG8JbkLUbo0OtmoOtFc7Niq64A=');
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
@@ -76,7 +76,7 @@ body {
 .card-text {
     padding: 10px 10px;
     font-size: x-large;
-    color: #ffffff;
+    color: #000000;
     text-align: center;
     height: auto;
     line-height: 1.5;
@@ -113,7 +113,7 @@ body {
 
 .modal-content {
     background-color: rgba(0, 0, 0, 0.6); /* Transparent dark overlay */
-    background-image: url('https://images.unsplash.com/photo-1517867065801-e20f409696b0?q=80&w=2071&auto=format&fit=crop');
+    background-image: url('');
     background-size: cover;
     background-position: center;
     margin: auto;
